--- a/css/index.css
+++ b/css/index.css
@@ -46,11 +46,19 @@ body {
 }
 
 .ranking {
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
 }
 
 .ranking .content {
   margin-top: 50px;
+}
+
+.ranking .content > img {
+  width: 275px;
+}
+
+.c-text {
+  margin-left: 300px;
 }
 /*# sourceMappingURL=index.css.map */
